[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tower-tools"
version = "0.0.1"
description = "Tower tools"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools",
    "requests==2.27.1",
    "sh==1.14.3",
    "passlib==1.7.4",
    "backports.pbkdf2==0.1",
    "sshconf==0.2.5",
    "hatchling",
    "wheel"
]

[tool.hatch.build.targets.wheel]
packages = ["tower"]

[tool.hatch.build]
include = [
  "tower/raspberrypios/*.patch",
  "tower/archlinux/installer/*",
]

[project.scripts]
tower = "tower.clis.tower:main"
build-tower-image = "tower.clis.buildimage:main"

[tool.hatch.metadata]
allow-direct-references=true

#[tool.hatch.envs.default]
#python = "/opt/homebrew/opt/python@3.10/bin/python3.10"