[build-system]
requires = ["hatchling==1.14.0"]
build-backend = "hatchling.build"

[project]
name = "tower-tools"
dynamic = ["version"]
description = "Tower tools"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools==67.6.1",
    "requests==2.27.1",
    "sh==1.14.3",
    "passlib==1.7.4",
    "backports.pbkdf2==0.1",
    "sshconf==0.2.5",
    "hatchling==1.14.0",
    "wheel==0.40.0",
    "rich==13.3.5",
    "yaspin==2.3.0",
]

[tool.hatch.build.targets.wheel]
include = ["tower", "scripts", "docs"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "docs/README.md"

[project.scripts]
tower = "tower.clis.tower:main"
build-tower-image = "tower.clis.buildtowerimage:main"

[tool.hatch.version]
path = "tower/__about__.py"
