[build-system]
requires = ["hatchling==1.14.0"]
build-backend = "hatchling.build"

[project]
name = "tower-build-cli"
dynamic = ["version"]
description = "Tower build cli"
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tower-lib @ {root:uri}/../tower-lib/",
]

[tool.hatch.build.targets.wheel]
include = ["towerbuildcli"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "../README.md"

[project.scripts]
tower-build = "towerbuildcli.towerbuild:main"

[tool.hatch.version]
path = "../tower-lib/towerlib/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true
