[build-system]
requires = ["hatchling==1.14.0"]
build-backend = "hatchling.build"

[project]
name = "tower-cli"
dynamic = ["version"]
description = "Tower cli"
readme = "../README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "tower-lib==0.1.3",
]

[tool.hatch.envs.default]
pre-install-commands = [
  "pip install -e ../tower-lib",
]

[tool.hatch.build.targets.wheel]
include = ["towercli"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "../README.md"

[project.scripts]
tower = "towercli.tower:main"

[tool.hatch.version]
path = "../tower-lib/towerlib/__about__.py"

[tool.hatch.metadata]
allow-direct-references = true
