[build-system]
requires = ["hatchling==1.14.0"]
build-backend = "hatchling.build"

[project]
name = "tower-lib"
dynamic = ["version"]
description = "Tower library"
readme = "../README.md"
licence = "Apache-2.0"
#license-files = { paths = ["../LICENSE"] }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "setuptools==67.6.1",
    "hatchling==1.14.0",
    "wheel==0.42.0",
    "requests==2.31.0",
    "passlib==1.7.4",
    "rich==13.7.0",
    "PyGObject==3.46.0",
    # apks in edge for now
    "sh==2.0.6",
    "shtab==1.6.5",
    # no apks for these
    "backports.pbkdf2==0.1",
    "sshconf==0.2.5",
    "yaspin==2.3.0",
    "argparse-manpage==4.5",
]

[tool.hatch.build.targets.wheel]
include = ["towerlib", "toweros-installers"]

#[tool.hatch.build.targets.wheel.force-include]
#"README.md" = "../README.md"

[tool.hatch.version]
path = "towerlib/__about__.py"

[tool.license_scanner]
allowed-licences = [
    'Apache license',
    'Apache license 2.0',
    'BSD 2-clause license',
    'BSD 3-clause license',
    'BSD license',
    'GNU general public license v2 (gplv2)',
    'GNU lesser general public license',
    'GNU lesser general public license v2 (lgplv2)',
    'GNU lesser general public license v3 (lgplv3)',
    'ISC license (iscl)', 'MIT license',
    'Mozilla public license 2.0 (mpl 2.0)',
    'Python software foundation license',
    'The Unlicense (Unlicense)',
]
allowed-packages = [
    'tower-cli', 'tower-lib',
    'pycairo',
]
